Yamls/Jwt/jwt-apps.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: req-authn-for-mem-bench
spec:
  selector:
    matchLabels:
      app: mem-bench
  jwtRules:
  - issuer: "testing@secure.istio.io"
    jwks: |
        {
          "keys": [
            {
              "e": "AQAB",
              "kid": "DHFbpoIUqrY8t2zpA2qXfCmr5VO5ZEr4RzHU_-envvQ",
              "kty": "RSA",
              "n": "xAE7eB6qugXyCAG3yhh7pkDkT65pHymX-P7KfIupjf59vsdo91bSP9C8H07pSAGQO1MV_xFj9VswgsCg4R6otmg5PV2He95lZdHtOcU5DXIg_pbhLdKXbi66GlVeK6ABZOUW3WYtnNHD-91gVuoeJT_DwtGGcp4ignkgXfkiEm4sw-4sfb4qdt5oLbyVpmW6x9cfa7vs2WTfURiCrBoUqgBo_-4WTiULmmHSGZHOjzwa8WtrtOQGsAFjIbno85jp6MnGGGZPYZbDAa_b3y5u-YpW7ypZrvD8BgtKVjgtQgZhLAGezMt0ua3DRrWnKqTZ0BJ_EyxOGuHJrLsn00fnMQ"
            }
          ]
        }
    forwardOriginalToken: true
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: authz-for-mem-bench
  namespace: default
spec:
  selector:
    matchLabels:
      app: mem-bench
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["testing@secure.istio.io/testing@secure.istio.io","cluster.local/ns/istio-system/sa/prometheus"]
---
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: req-authn-for-cpu-bench
spec:
  selector:
    matchLabels:
      app: cpu-bench
  jwtRules:
  - issuer: "testing@secure.istio.io"
    jwks: |
        {
          "keys": [
            {
              "e": "AQAB",
              "kid": "DHFbpoIUqrY8t2zpA2qXfCmr5VO5ZEr4RzHU_-envvQ",
              "kty": "RSA",
              "n": "xAE7eB6qugXyCAG3yhh7pkDkT65pHymX-P7KfIupjf59vsdo91bSP9C8H07pSAGQO1MV_xFj9VswgsCg4R6otmg5PV2He95lZdHtOcU5DXIg_pbhLdKXbi66GlVeK6ABZOUW3WYtnNHD-91gVuoeJT_DwtGGcp4ignkgXfkiEm4sw-4sfb4qdt5oLbyVpmW6x9cfa7vs2WTfURiCrBoUqgBo_-4WTiULmmHSGZHOjzwa8WtrtOQGsAFjIbno85jp6MnGGGZPYZbDAa_b3y5u-YpW7ypZrvD8BgtKVjgtQgZhLAGezMt0ua3DRrWnKqTZ0BJ_EyxOGuHJrLsn00fnMQ"
            }
          ]
        }
    forwardOriginalToken: true
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: authz-for-cpu-bench
  namespace: default
spec:
  selector:
    matchLabels:
      app: cpu-bench
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["testing@secure.istio.io/testing@secure.istio.io","cluster.local/ns/istio-system/sa/prometheus"]
---
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: req-authn-for-front
spec:
  selector:
    matchLabels:
      app: front
  jwtRules:
  - issuer: "testing@secure.istio.io"
    jwks: |
        {
          "keys": [
            {
              "e": "AQAB",
              "kid": "DHFbpoIUqrY8t2zpA2qXfCmr5VO5ZEr4RzHU_-envvQ",
              "kty": "RSA",
              "n": "xAE7eB6qugXyCAG3yhh7pkDkT65pHymX-P7KfIupjf59vsdo91bSP9C8H07pSAGQO1MV_xFj9VswgsCg4R6otmg5PV2He95lZdHtOcU5DXIg_pbhLdKXbi66GlVeK6ABZOUW3WYtnNHD-91gVuoeJT_DwtGGcp4ignkgXfkiEm4sw-4sfb4qdt5oLbyVpmW6x9cfa7vs2WTfURiCrBoUqgBo_-4WTiULmmHSGZHOjzwa8WtrtOQGsAFjIbno85jp6MnGGGZPYZbDAa_b3y5u-YpW7ypZrvD8BgtKVjgtQgZhLAGezMt0ua3DRrWnKqTZ0BJ_EyxOGuHJrLsn00fnMQ"
            }
          ]
        }
    forwardOriginalToken: true
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: authz-for-front
  namespace: default
spec:
  selector:
    matchLabels:
      app: front
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["testing@secure.istio.io/testing@secure.istio.io","cluster.local/ns/istio-system/sa/prometheus"]
